# hmi

./: CMakeLists.txt  GitInfo.cmake  GlobalConfig.qml  MemoryTest.h  can.sh  conanfile.txt  generate_proto.sh  main.cpp  main.qml  qml.qrc  readme.md  rungitdiff.sh  version
autodrive/: AduHelper.cc  AduHelper.h  AduProxy.cpp  AduProxy.h  AutodriveManager.cpp  AutodriveManager.h  DataManager.cpp  DataManager.h  GlParam.h  HdmapData.cpp  HdmapData.h  InfoParam.h  SaveFrameTask.cpp  SaveFrameTask.h  SystemOS.h  TrafficLightType.cc  TrafficLightType.h  autodrive_item.cpp  autodrive_item.h  autodrive_item2.cpp  autodrive_item2.h  autodrive_renderer.cpp  autodrive_renderer.h  autodrive_renderer2.cpp  autodrive_renderer2.h  (+23 more)
common/coordinate_convert/example/: CMakeLists.txt  example.cc
features/: CMakeLists.txt
features/application/: application_info_model.cpp  application_info_model.h  application_info_vmodel.cpp  application_info_vmodel.h
features/realtime_route/: async_invoker.h  realtime_route_model.cpp  realtime_route_model.h  realtime_route_service.cpp  realtime_route_service.h
service/adu_client/: CMakeLists.txt  hmi_client_config.json
service/adu_client/example/: CMakeLists.txt  main.cc  recv_auto_drive_resp_from_adu.cc  recv_auto_drive_resp_from_adu.h  recv_caemra_resp_from_adu.cc  recv_camera_resp_from_adu.h  recv_curve_points_from_adu.cc  recv_curve_points_from_adu.h  subs_base_info_from_adu.cc  subs_base_info_from_adu.h  subs_camera_from_adu.cc  subs_camera_from_adu.h  subs_filter_point_cloud_from_adu.cc  subs_filter_point_cloud_from_adu.h
service/adu_client/src/: client.cc  client.h  common.h  context.cc  context.h  create_message_template.h  helper.cc  helper.h  read_config.cc  read_config.h  recv_interface.h  send_data_to_adu_proxy.cc  send_data_to_adu_proxy.h  subscriber.cc  subscriber.h
third/three/: CMakeLists.txt  README.md  conanfile.txt
third/three/scripts/: analyze.py  color.py  funs.py  generate.py  install.py  log.py  macro.py  make.py  test.py  uniform.py  utils.py
third/three/scripts/res/glsl/shader_chunk/: bsdfs.glsl  color_fragment.glsl  color_pars_fragment.glsl  color_pars_vertex.glsl  color_vertex.glsl  default_fragment.glsl  default_vertex.glsl  lights_fragment_begin.glsl  lights_lambert_fragment.glsl  lights_lambert_pars_fragment.glsl  lights_pars_begin.glsl  lights_phong_pars_fragment.glsl  normal_fragment_begin.glsl  normal_pars_fragment.glsl  normal_pars_vertex.glsl  normal_vertex.glsl  output_fragment.glsl  project_vertex.glsl  worldpos_vertex.glsl
third/three/scripts/res/glsl/shader_lib/: default.fragment.glsl  default.vertex.glsl  mesh_basic.fragment.glsl  mesh_basic.vertex.glsl  mesh_lambert.fragment.glsl  mesh_lambert.vertex.glsl  mesh_phong.fragment.glsl  points.fragment.glsl  points.vertex.glsl
third/three/scripts/res/template/: shader_chunk.cpp  shader_lib.cpp  shader_lib.h
third/three/src/: constants.h  three.h
third/three/src/cameras/: camera.cpp  camera.h  perspective_camera.cpp  perspective_camera.h
third/three/src/core/: array.cpp  array.h  array.inl  event_dispatcher.cpp  event_dispatcher.h  geometry.cpp  geometry.h  geometry_attribute.cpp  geometry_attribute.h  geometry_instanced_attribute.cpp  geometry_instanced_attribute.h  interactive_event_dispatcher.cpp  interactive_event_dispatcher.h  object.cpp  object.h
third/three/src/examples/controls/: control.h  fly_control.cpp  fly_control.h  orbit_control.cpp  orbit_control.h
third/three/src/extras/: image.cpp  image.h
third/three/src/geometries/: box_geometry.cpp  box_geometry.h  circle_geometry.cpp  circle_geometry.h  sphere_geometry.cpp  sphere_geometry.h
third/three/src/lights/: ambient_light.cpp  ambient_light.h  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
third/three/src/loaders/: object_loader.cpp  object_loader.h
third/three/src/materials/: material.cpp  material.h  mesh_basic_material.cpp  mesh_basic_material.h  mesh_lambert_material.cpp  mesh_lambert_material.h  mesh_phong_material.cpp  mesh_phong_material.h  points_material.cpp  points_material.h  shader_material.cpp  shader_material.h
third/three/src/math/: color.cpp  color.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  spherical.cpp  spherical.h  vector.cpp  vector.h
third/three/src/objects/: group.cpp  group.h  instanced_mesh.cpp  instanced_mesh.h  line.cpp  line.h  mesh.cpp  mesh.h  model.cpp  model.h  points.cpp  points.h
third/three/src/renderers/: renderer.cpp  renderer.h
third/three/src/renderers/gl/: attributes.cpp  attributes.h  background.cpp  background.h  binding_states.cpp  binding_states.h  buffer_renderer.cpp  buffer_renderer.h  buffers.cpp  buffers.h  capabilities.cpp  capabilities.h  datetime.cpp  datetime.h  extensions.cpp  extensions.h  geometries.cpp  geometries.h  index_buffer_renderer.cpp  index_buffer_renderer.h  info.cpp  info.h  lights.cpp  lights.h  logger.cpp  logger.h  logger.inl  objects.cpp  objects.h  program.cpp  program.h  programs.cpp  programs.h  properties.cpp  properties.h  render_lists.cpp  render_lists.h  render_states.cpp  render_states.h  shader_cache.cpp  (+8 more)
third/three/src/renderers/shaders/: shader_chunk.cpp  shader_chunk.h  shader_lib.cpp  shader_lib.h  uniform_lib.h
third/three/src/scenes/: scene.cpp  scene.h
third/three/src/textures/: texture.cpp  texture.h
third/three/src/utils/: access_util.h  attenuation_util.cpp  attenuation_util.h  clock_util.cpp  clock_util.h  memory_util.cpp  memory_util.h  object_util.cpp  object_util.h  string_util.cpp  string_util.h
third/three/third/cppgl-1.0.0/: CMakeLists.txt  README.md
third/three/third/cppgl-1.0.0/include/: cppgl.h
third/three/third/cppgl-1.0.0/scripts/: cplus_parser.py  funs.py  make_from_glad.py  make_from_qt.py  utils.py
third/three/third/cppgl-1.0.0/scripts/res/glad/: glad.h
third/three/third/cppgl-1.0.0/scripts/res/qt/: qopenglfunctions.h
third/three/third/cppgl-1.0.0/scripts/res/templates/: cppgl.cpp  cppgl.h  qtgles3.cpp  qtgles3.h
third/three/third/cppgl-1.0.0/src/: cppgl.cpp
(+239 files in other folders)
